# Montage

./: .clang-format  .gitignore  CMakeLists.txt  MontageApp.jucer  README.md
Source/: Arrangement.cpp  Arrangement.h  CMakeLists.txt  ContentContainer.cpp  Cursor.cpp  Cursor.h  ErrorManager.cpp  ErrorManager.h  ErrorMessage.cpp  ErrorMessage.h  FigureGenerator.cpp  FigureGenerator.h  FigureManager.h  Figures.cpp  Figures.h  FileManager.cpp  FileManager.h  Icons.cpp  Icons.h  Indentifiers.h  Main.cpp  MainComponent.cpp  MainComponent.h  MainHeader.h  NumberGenerators.h  ParticleSelector.cpp  ParticleSelector.h  Particles.cpp  Particles.h  ParticlesManifest.cpp  ParticlesManifest.h  ParticlesPage.cpp  ParticlesPage.h  PositionMarker.cpp  PositionMarker.h  SegmentSelector.cpp  SegmentSelector.h  Sequencer.cpp  Sequencer.h  Source.cpp  (+14 more)
Source/AudioComponents/: AudioEditViewport.cpp  AudioEditViewport.h  CMakeLists.txt  Cursor.cpp  Cursor.h  TimeDisplay.cpp  TimeDisplay.h  TimeScalingFactor.h  TracktionThumbnail.cpp  TracktionThumbnail.h  TransportController.cpp  TransportController.h  TransportInteractor.cpp  TransportInteractor.h  TransportManager.cpp  TransportManager.h
Source/DataManagement/: AppState.cpp  AppState.h  CMakeLists.txt  CollectionHelper.cpp  CollectionHelper.h  Event.cpp  Event.h  EventList.cpp  EventList.h  EventsTable.cpp  EventsTable.h  Figure.cpp  Figure.h  FigureCollection.cpp  FigureCollection.h  FigureList.cpp  FigureList.h  FigureManager.cpp  FigureManager.h  FiguresTable.cpp  FiguresTable.h  FileManager.cpp  FileManager.h  ObjectList.h  Particle.cpp  Particle.h  ParticleCollection.cpp  ParticleCollection.h  ParticleList.cpp  ParticleList.h  ParticlesManifest.cpp  ParticlesManifest.h  ProjectState.cpp  ProjectState.h  Source.cpp  Source.h  SourceList.cpp  SourceList.h  SourceManager.cpp  SourceManager.h  (+5 more)
Source/Errors/: CMakeLists.txt  ErrorManager.cpp  ErrorManager.h  ErrorMessage.cpp  ErrorMessage.h  ErrorMessageModal.cpp  ErrorMessageModal.h  ErrorTypes.cpp  ErrorTypes.h
Source/Figures/: CMakeLists.txt  DurationProtocolConfig.cpp  DurationProtocolConfig.h  DurationProtocolParams.cpp  DurationProtocolParams.h  DurationProtocolSelector.cpp  DurationProtocolSelector.h  FigureGenerator.cpp  FigureGenerator.h  FigureOnsetSelection.cpp  FigureOnsetSelection.h  FigureParticleSelection.cpp  FigureParticleSelection.h  FigureProcessor.cpp  FigureProcessor.h  MyTestClass.cpp  MyTestClass.h  NumberProtocolConfig.cpp  NumberProtocolConfig.h  NumberProtocolSelector.cpp  NumberProtocolSelector.h  NumberProtocolSettings.cpp  NumberProtocolSettings.h  SettingsReview.cpp  SettingsReview.h  TestIdentifiers.h
Source/Figures/DurationProtocolControllers/: CMakeLists.txt  DurationProtocolController.cpp  DurationProtocolController.h  GeometricProtocolController.cpp  GeometricProtocolController.h  MultiplesProtocolController.cpp  MultiplesProtocolController.h  PrescribedProtocolController.cpp  PrescribedProtocolController.h
Source/Figures/NumberProtocolControllers/: AdjacentStepsProtocolController.cpp  AdjacentStepsProtocolController.h  BasicProtocolController.cpp  BasicProtocolController.h  CMakeLists.txt  CycleProtocolController.cpp  CycleProtocolController.h  GranularWalkProtocolController.cpp  GranularWalkProtocolController.h  GroupedRepetitionProtocolController.cpp  GroupedRepetitionProtocolController.h  NoRepetitionProtocolController.cpp  NoRepetitionProtocolController.h  NumberProtocolController.cpp  NumberProtocolController.h  PeriodicProtocolController.cpp  PeriodicProtocolController.h  PrecisionProtocolController.cpp  PrecisionProtocolController.h  RatioProtocolController.cpp  RatioProtocolController.h  SerialProtocolController.cpp  SerialProtocolController.h  SubsetProtocolController.cpp  SubsetProtocolController.h  WalkProtocolController.cpp  WalkProtocolController.h
Source/PageLayout/: CMakeLists.txt  ContentContainer.cpp  ContentContainer.h  Figures.cpp  Figures.h  MainHeader.cpp  MainHeader.h  ParticlesPage.cpp  ParticlesPage.h  ProjectInitialiser.cpp  ProjectInitialiser.h
Source/Particles/: CMakeLists.txt  ParticleEditor.cpp  ParticleEditor.h  ParticleSelector.cpp  ParticleSelector.h  ParticleView.cpp  ParticleView.h  Particles.cpp  Particles.h  ParticlesManager.cpp  ParticlesManager.h  ParticlesSelection.cpp  ParticlesSelection.h  SourceSelector.cpp  SourceSelector.h
Source/Sequencer/: Arrangement.cpp  Arrangement.h  CMakeLists.txt  LevelMeterView.cpp  LevelMeterView.h  Sequencer.cpp  Sequencer.h  SequencerControlsView.cpp  SequencerControlsView.h  SequencerViewState.h  Timeline.cpp  Timeline.h  TrackControlPanel.cpp  TrackControlPanel.h
Source/Sequencer/Plugins/: AutoParamGraph.cpp  AutoParamGraph.h  AutoParamValueSource.cpp  AutoParamValueSource.h  CMakeLists.txt  PluginsModal.cpp  PluginsModal.h
Source/Tests/: AppStateTest.cpp  CMakeLists.txt  DurationProtocolParamsTest.cpp  EventListTest.cpp  EventTest.cpp  FigureCollectionTest.cpp  FigureListTest.cpp  FigureProcessorTest.cpp  FigureTest.cpp  Main.cpp  MyTestClassTest.cpp  NumberProtocolSettingsTest.cpp  ParticleCollectionTest.cpp  ParticleListTest.cpp  ParticleTest.cpp  ProjectStateTest.cpp  SourceListTest.cpp  SourceTest.cpp  VariantConvertersTest.cpp
Source/Tests/Helpers/: CMakeLists.txt  StateHelpers.cpp  StateHelpers.h  TestHelpers.cpp  TestHelpers.h
Source/Utilities/: AudioRenderer.cpp  AudioRenderer.h  CMakeLists.txt  DecisionModal.cpp  DecisionModal.h  DoubleValueEditorWithLabel.cpp  DoubleValueEditorWithLabel.h  Helpers.h  Icons.cpp  Icons.h  Identifiers.h  MontageTracktionUIBehaviour.cpp  MontageTracktionUIBehaviour.h  NumberGenerators.cpp  NumericCollectionEditor.cpp  NumericCollectionEditor.h  NumericValueEditorWithLabel.cpp  NumericValueEditorWithLabel.h  SliderWithLabel.cpp  SliderWithLabel.h  StringEditorWithLabel.cpp  StringEditorWithLabel.h
assets/presets/: preset1.xml
assets/presets/preset-1/: project-state.xml
dependencies/: CMakeLists.txt
